[project]
name = "LLM_text_to_sql"
version = "0.1.0"
description = "A project for text-to-SQL using LLMs"
readme = "README.md"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "openai",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "pandas",
    "langchain-groq",
    "ipython",
    "ipykernel",
    "jupyter",
    "loguru",
    "uvicorn",
    "uuid>=1.30",
]
requires-python = ">=3.12"
