[project]
name = "LLM_text_to_sql"
version = "0.1.0"
description = "A project for text-to-SQL using LLMs"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # LLM integrations
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "langchain-groq>=0.1.0",
    "langgraph>=0.1.0",
    
    # Database and SQL
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "duckdb>=0.9.0",
    "sqlparse>=0.4.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # API and web
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    
    # Utilities
    "jupyter>=1.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "app"]
[tool.setuptools.package-dir]
"agent" = "src/agent"
"app" = "app"
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ipykernel",
    "ipython",
]